// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With snapshots 🎉 should render correctly 1`] = `
<div>
  <h1>
    0
  </h1>
  <p>
    Even
  </p>
  <button
    onClick={[Function]}
  >
    Increase
  </button>
</div>
`;

exports[`With snapshots 🎉 should update text when clicking on button 1`] = `
<div>
  <h1>
    1
  </h1>
  <p>
    Odd
  </p>
  <button
    onClick={[Function]}
  >
    Increase
  </button>
</div>
`;
